--- a/app/views/api/index.html.erb
+++ b/app/views/api/index.html.erb
@@ -1,3 +1,4 @@
+<%= @apod_data%>
 <h1>Astronomy Picture of the Day</h1>
 <h2><%= @apod_data['title'] %></h2>
 <img src="<%= @apod_data['url'] %>" alt="<%= @apod_data['title'] %>">
