--- a/app/views/api/principal.html.erb
+++ b/app/views/api/principal.html.erb
@@ -3,23 +3,23 @@
 </header>
 <div class="container">
 <div class="apod">
-    <h2>Imagen astronómica del día (APOD)</h2>
-    <img src="url_de_la_imagen_apod.jpg" alt="Imagen APOD">
-    <p>Título: Título de la imagen APOD</p>
-    <p>Fecha: Fecha de la imagen APOD</p>
-    <p>Descripción: Descripción de la imagen APOD</p>
+    <h1>Imagen astronómica del día (APOD)</h1>
+    <h2><%= @apod_data['title'] %></h2>
+    <p>Fecha: <%= @apod_data['date']%></p>
+    <img src="<%= @apod_data['url'] %>" alt="<%= @apod_data['title'] %>">
+    <p><%= @apod_data['explanation'] %></p>
 </div>
 
 <div class="mars-images">
-    <h2>Imágenes de Marte</h2>
-    <img src="url_de_imagen_marte_1.jpg" alt="Imagen de Marte 1">
-    <img src="url_de_imagen_marte_2.jpg" alt="Imagen de Marte 2">
-    <!-- Agrega más imágenes de Marte según sea necesario -->
-</div>
-
+    <h1>Imágenes de Marte</h1>
+    <h2><%= @marte_data['photos'][0]['camera']['full_name'] %></h2>
+    <img src="<%= @marte_data['photos'][0]['img_src'] %>" alt="<%= @marte_data['photos'][0]['camera']['full_name'] %>">
+  </div>
 <div class="exoplanets">
-    <h2>Datos de exoplanetas</h2>
-    <p>Información sobre exoplanetas fuera de nuestro sistema solar.</p>
-    <!-- Puedes agregar más datos de exoplanetas aquí -->
+    <h1>Información sobre Exoplaneta Aleatorio</h1>
+
+    <h2><%= @exoplanet['pl_name'] %></h2>
+    <p>Estrella anfitriona: <%= @exoplanet['hostname'] %></p>
+    <p>Tipo de descubrimiento: <%= @exoplanet['discoverymethod'] %></p>
 </div>
 </div>
